Python translation of the code

--- a/.gitignore
+++ b/.gitignore
@@ -263,3 +263,5 @@ __pycache__/
 .vscode/tasks.json
 .vscode/c_cpp_properties.json
 .vscode/settings.json
+Prod in Python/TranslatedToPyth/TranslatedToPyth.sln
+Prod in Python/TranslatedToPyth/TranslatedToPyth/TranslatedToPyth.pyproj
