--- a/Project1/Project1/Project1.vcxproj
+++ b/Project1/Project1/Project1.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Cpp_SIPL.h" />
+    <ClInclude Include="..\..\Polys.h" />
     <ClInclude Include="..\..\RandomTreeGenerator.h" />
     <ClInclude Include="..\..\stb_image.h" />
     <ClInclude Include="..\..\stb_image_write.h" />
